--- a/AspServerExample/Web.config
+++ b/AspServerExample/Web.config
@@ -7,9 +7,17 @@
 
 <configuration>
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
-    </system.web>
+  <connectionStrings>
+    <add
+        name="DB_HomeShopping"
+        connectionString="Data Source=******\******;Initial Catalog=HomeShopping;Integrated Security=True"
+        providerName="System.Data.SqlClient"
+        />
+  </connectionStrings>
+
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
+  </system.web>
 
 </configuration>
